--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: amd64,arm64
+          platforms: amd64
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2
@@ -49,6 +49,6 @@ jobs:
           push: true
           file: ${{ env.DOCKERFILE }}
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
