--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v2
         with:
-          platforms: amd64
+          platforms: amd64,arm64
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2
@@ -57,6 +57,6 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           build-args: |
             PHP_VERSION=${{ matrix.php_version }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
